--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-debhelper (10.10.5) UNRELEASED; urgency=medium
+debhelper (10.10.5) unstable; urgency=medium
 
   * meson.pm: Add missing import of generated_file that broke
     cross building.
@@ -6,7 +6,7 @@ debhelper (10.10.5) UNRELEASED; urgency=medium
     paragraph in d/control would cause parse error.
     (Closes: #879762)
 
- -- Niels Thykier <niels@thykier.net>  Thu, 26 Oct 2017 17:46:14 +0000
+ -- Niels Thykier <niels@thykier.net>  Thu, 26 Oct 2017 19:10:51 +0000
 
 debhelper (10.10.4) unstable; urgency=medium
 
