--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (10.10.6) UNRELEASED; urgency=medium
+
+  * Cleanup trailing whitespace in ancient debian/changelog entries.
+
+ -- Axel Beckert <abe@debian.org>  Fri, 27 Oct 2017 23:48:44 +0200
+
 debhelper (10.10.5) unstable; urgency=medium
 
   * meson.pm: Add missing import of generated_file that broke
@@ -2214,7 +2220,7 @@ debhelper (8.9.10) unstable; urgency=low
 
 debhelper (8.9.9) unstable; urgency=low
 
-  * dh_auto_build: Use target architecture (not host architecture) 
+  * dh_auto_build: Use target architecture (not host architecture)
     for build directory name. Closes: #644553 Thanks, Tom Hughes
   * dh: Add dh_auto_configure parameter example. Closes: #645335
 
@@ -2250,7 +2256,7 @@ debhelper (8.9.7) unstable; urgency=low
     overrides, because mixing the two types of overrides would have been
     too complicated. In particular, it's difficult to ensure an
     old override target will work if it's sometimes constrained to only
-    acting on half the packages it would normally run on. This would be 
+    acting on half the packages it would normally run on. This would be
     a source of subtle bugs, so is avoided.
   * dh: Don't bother running dh_shlibdebs, dh_makeshlibs, or dh_strip
     in the binary target when all packages being acted on are indep.
@@ -2356,7 +2362,7 @@ debhelper (8.1.6) unstable; urgency=low
 debhelper (8.1.5) unstable; urgency=low
 
   * dh_ucf: New command, contributed by Jeroen Schot. Closes: #213078
-  * dh_installgsettings: Correct bug in use of find that caused some 
+  * dh_installgsettings: Correct bug in use of find that caused some
     gsettings files to be missed. Closes: #624377
 
  -- Joey Hess <joeyh@debian.org>  Wed, 27 Apr 2011 21:33:50 -0400
@@ -2368,7 +2374,7 @@ debhelper (8.1.4) unstable; urgency=low
     when passed bundled options (like "-Nfoo" instead of "-N foo") that
     it does not understand; and it was not possible to fix that
     for any compat level before v8. But also, such logs can occur
-    for other reasons, like interrupted builds during development, 
+    for other reasons, like interrupted builds during development,
     and it should be safe to clean them all. Closes: #623446
   * Fix Typos in documentation regarding {pre,post}{inst,rm}
     Closes: #623709
@@ -2461,11 +2467,11 @@ debhelper (8.1.0) unstable; urgency=low
   * dh_installinit: never call init scripts directly, only through invoke-rc.d
     Closes: #610340
     (Thanks, Steve Langasek)
-  
+
   [ Valery Perrin ]
   * update french translation.
   * Fix french misspelling.
-  * French translation update after massive man page typography 
+  * French translation update after massive man page typography
 
  -- Joey Hess <joeyh@debian.org>  Sat, 05 Feb 2011 12:00:04 -0400
 
@@ -2499,7 +2505,7 @@ debhelper (7.9.1) unstable; urgency=low
     changes are planned for that mode.
   * dh_installman: Support .so links relative to the current section.
   * dh_installman: Avoid converting .so links to symlinks if the link
-    target is not present in the same binary package, on advice of 
+    target is not present in the same binary package, on advice of
     Colin Watson. (To support eventual so search paths.)
   * Add deprecation warning for dh_clean -k.
   * dh_testversion: Removed this deprecated and unused command.
@@ -2591,7 +2597,7 @@ debhelper (7.4.15) unstable; urgency=low
 
   * The fix for #563557 caused some new trouble involving makefile
     that misbehave when stderr is closed. Reopen it to /dev/null
-    when testing for the existance of a makefile target. Closes: #570443 
+    when testing for the existance of a makefile target. Closes: #570443
 
  -- Joey Hess <joeyh@debian.org>  Thu, 18 Feb 2010 16:37:34 -0500
 
@@ -2740,7 +2746,7 @@ debhelper (7.4.3) unstable; urgency=low
     dh_installudev, dh_lintian, dh_prep into po4a.cfg manpages list
   * fix a spelling mistake in dh_makeshlibs man french
     translation (#494300 part 2)
-  
+
   [ Joey Hess ]
   * dh_perl: Do not look at perl scripts under /usr/share/doc.
     Closes: #546683
@@ -2777,7 +2783,7 @@ debhelper (7.4.1) unstable; urgency=low
     symlinks in /etc/init.d for sysv-rc implementations.  Closes: #536035.
 
   [ Joey Hess ]
-  * Add FILES sections to man pages. Closes: #545041 
+  * Add FILES sections to man pages. Closes: #545041
   * dh_prep(1): Clarify when it should be called. Closes: #544969
 
  -- Joey Hess <joeyh@debian.org>  Sun, 06 Sep 2009 18:44:40 -0400
@@ -2818,7 +2824,7 @@ debhelper (7.3.15) unstable; urgency=low
   * dh_installudev: Add code to delete old conffiles unless
     they're modified, and in that case, rename them to override
     the corresponding file in /lib/udev. (Based on patch by
-    Martin Pitt.) (Note that this file will not be deleted on purge -- 
+    Martin Pitt.) (Note that this file will not be deleted on purge --
     I can't see a good way to determine when it's appropriate to do
     that.)
   * dh_installudev: Set default priority to 60; dropping the "z".
@@ -3242,7 +3248,7 @@ debhelper (7.1.0) experimental; urgency=low
     complaining about it when it's empty. Closes: #498666
   * dh: Fix typo in example. Closes: #500836
   * Allow individual debhelper programs to define their own special options
-    by passing a hash to init(), which is later passed on the Getopt::Long. 
+    by passing a hash to init(), which is later passed on the Getopt::Long.
     Closes: #370823
   * Move many command-specific options to only be accepted by the command
     that uses them. Affected options are:
@@ -3290,7 +3296,7 @@ debhelper (7.0.50) unstable; urgency=low
   * dh: Support debian/rules calling make with -B,
     which is useful to avoid issues with phony implicit
     rules (see bug #509756).
- 
+
  -- Joey Hess <joeyh@debian.org>  Fri, 27 Feb 2009 15:25:52 -0500
 
 debhelper (7.0.17) unstable; urgency=low
@@ -3383,7 +3389,7 @@ debhelper (7.0.9) unstable; urgency=low
 debhelper (7.0.8) unstable; urgency=low
 
   * dh: Add an interface that third-party packages providing debhelper commands
-    can use to insert them into a command sequence. 
+    can use to insert them into a command sequence.
     (See dh(1), "SEQUENCE ADDONS".)
   * dh: --with=foo can be used to include such third-party commands.
     So, for example, --with=cli could add the dh_cli* commands from
@@ -3742,7 +3748,7 @@ debhelper (5.0.50) unstable; urgency=low
   * Update urls to web page.
   * Add some checks for attempts to act on packages not defined in the control
     file. (Thanks Wakko)
-  * Use dpkg-query to retrieve conffile info in udev rules upgrade code 
+  * Use dpkg-query to retrieve conffile info in udev rules upgrade code
     rather than parsing status directly. (Thanks Guillem)
 
  -- Joey Hess <joeyh@debian.org>  Thu, 31 May 2007 13:14:06 -0400
@@ -3900,7 +3906,7 @@ debhelper (5.0.38) unstable; urgency=low
 
   [ Valery Perrin ]
   * Update french translation with recent change in dh_installmodules
-  
+
   [ Joey Hess]
   * ACK last three NMUs with thanks to Raphael Hertzog for making the best of
     a difficult situation.
@@ -4334,7 +4340,7 @@ debhelper (5.0.0) unstable; urgency=low
     level and changes from earlier levels are concentrated in the
     "Debhelper compatibility levels" section of debhelper.1. Closes: #336906
   * Deprecate v3.
-  * dh_install: Add package name to missing files error. Closes: #336908 
+  * dh_install: Add package name to missing files error. Closes: #336908
 
  -- Joey Hess <joeyh@debian.org>  Tue,  1 Nov 2005 18:54:29 -0500
 
@@ -4384,8 +4390,8 @@ debhelper (4.9.10) unstable; urgency=low
 
 debhelper (4.9.9) unstable; urgency=low
 
-  * dh_shlibdeps: Avoid a use strict warning in some cases if 
-    LD_LIBRARY_PATH is not set. 
+  * dh_shlibdeps: Avoid a use strict warning in some cases if
+    LD_LIBRARY_PATH is not set.
   * ACK NMU. Closes: #327209
 
  -- Joey Hess <joeyh@debian.org>  Wed,  7 Sep 2005 15:32:53 -0400
@@ -4393,7 +4399,7 @@ debhelper (4.9.9) unstable; urgency=low
 debhelper (4.9.8.1) unstable; urgency=low
 
   * NMU with maintainer approval.
-  * dh_gconf: delegate schema registration the gconf-schemas script, 
+  * dh_gconf: delegate schema registration the gconf-schemas script,
     which moves schemas to /var/lib/gconf, and require gconf2 2.10.1-2,
     where it can be found. Closes: #327209
 
@@ -4464,7 +4470,7 @@ debhelper (4.9.1) unstable; urgency=low
 debhelper (4.9.0) unstable; urgency=low
 
   * Begin work on compatibility level 5. The set of changes in this mode is
-    still being determined, and will be until debhelper version 5.0 is 
+    still being determined, and will be until debhelper version 5.0 is
     released, so use at your own risk.
   * dh_strip: In v5, make --dbg-package specify a single debugging package
     that gets the debugging symbols from the other packages acted on.
@@ -4806,7 +4812,7 @@ debhelper (4.1.90) unstable; urgency=low
   * dh_strip: Add note to man page that the detached debugging symbols options
     mean the package must build-depend on a new enough version of binutils.
     Closes: #231382
-  * dh_installdebconf: The debconf dependency has changed to include 
+  * dh_installdebconf: The debconf dependency has changed to include
     "| debconf-2.0". Closes: #230622
 
  -- Joey Hess <joeyh@debian.org>  Sat,  7 Feb 2004 15:10:10 -0500
@@ -5300,7 +5306,7 @@ debhelper (4.1.26) unstable; urgency=low
 
 debhelper (4.1.25) unstable; urgency=low
 
-  * Added a dh_python command, by Josselin Mouette 
+  * Added a dh_python command, by Josselin Mouette
     <josselin.mouette@ens-lyon.org>.
 
  -- Joey Hess <joeyh@debian.org>  Thu, 21 Nov 2002 00:55:35 -0500
@@ -5616,7 +5622,7 @@ debhelper (4.0.5) unstable; urgency=low
 debhelper (4.0.4) unstable; urgency=low
 
   * Set DH_ALWAYS_EXCLUDE=CVS and debhelper will exclude CVS directories
-    from processing by any command that takes a -X option, and dh_builddeb 
+    from processing by any command that takes a -X option, and dh_builddeb
     will also go in and rm -rf any that still sneak into the build tree.
   * dh_install: A patch from Eric Dorland <eric@debian.org> adds support for
     --sourcedir, which allows debian/package.files files to be moved over to
@@ -5674,7 +5680,7 @@ debhelper (4.0.0) unstable; urgency=low
     bad design, you are incouraged to just use dh_install instead.
   * dh_fixperms: in v4 only, make all files in bin/ dirs +x. Closes: #119039
   * dh_fixperms: in v4 only, make all files in etc/init.d executable (of
-    course there's -X ..)    
+    course there's -X ..)
   * dh_link: in v4 only, finds existing, non-policy-conformant symlinks
     and corrects them. This has the side effect of making dh_link idempotent.
   * Added a -h/--help option. This seems very obvious, but it never occured to
@@ -5829,7 +5835,7 @@ debhelper (3.4.0) unstable; urgency=low
   * Added referneces to menufile in dh_installmenu man page. Closes: #127978
     (dh_make is not a part of debhelper, if you want it changed, file a bug on
     dh-make.)
-    
+
  -- Joey Hess <joeyh@debian.org>  Sat,  5 Jan 2002 22:45:09 -0500
 
 debhelper (3.0.54) unstable; urgency=low
@@ -5867,7 +5873,7 @@ debhelper (3.0.50) unstable; urgency=low
   * dh_installdeb: changed the #!/bin/sh -e to set -e on a new line. Whether
     this additional bloat is worth it to make it easier for people to sh -x
     a script by hand is debatable either way, I guess. Closes: #119046
-  * Added a check for duplicated package stanzas in debian/control, 
+  * Added a check for duplicated package stanzas in debian/control,
     Closes: #118805
 
  -- Joey Hess <joeyh@debian.org>  Sat, 17 Nov 2001 14:00:54 -0500
@@ -5916,7 +5922,7 @@ debhelper (3.0.43) unstable; urgency=low
 
   * dh_perl: made it use doit commands so -v mode works. Yeah, uglier.
     Closes: #92826
-    Also some indentation fixes. 
+    Also some indentation fixes.
 
  -- Joey Hess <joeyh@debian.org>  Fri, 24 Aug 2001 15:34:55 -0400
 
@@ -5925,8 +5931,8 @@ debhelper (3.0.42) unstable; urgency=low
   * dh_movefiles: Typo, Closes: #106532
   * Use -x to test for existance of init scripts, rather then -e since
     we'll be running them, Closes: #109692
-  * dh_clean: remove debian/*.debhelper. No need to name files 
-    specifically; any file matching that is a debhelper temp file. 
+  * dh_clean: remove debian/*.debhelper. No need to name files
+    specifically; any file matching that is a debhelper temp file.
     Closes: #106514, #85520
 
  -- Joey Hess <joeyh@debian.org>  Thu, 23 Aug 2001 15:47:35 -0400
@@ -6034,17 +6040,17 @@ debhelper (3.0.27) unstable; urgency=low
     of options after --. Now that it's fixed, any and all programs that
     support a -- and options after it, do not require any special quoting
     of the succeeding options. Quote just like you would in whatever
-    program those options go to. So, for example, 
+    program those options go to. So, for example,
     dh_gencontrol -Vblah:Depends='foo, bar (>= 1.2)' will work just as you
     would hope. This fix does NOT apply to -u; don't use -u if you must do
     something complex. Closes: #89311
   * Made escape_shell output a lot better.
- 
+
  -- Joey Hess <joeyh@debian.org>  Tue, 29 May 2001 17:54:19 -0400
 
 debhelper (3.0.26) unstable; urgency=low
 
-  * Always include package name in maintainer script fragment filenames 
+  * Always include package name in maintainer script fragment filenames
     and generated shlibs files (except for in DH_COMPAT=1 mode). This is a
     purely cosmetic change, and if it breaks anything, you were using an
     undocumented interface. Closes: #95387
@@ -6069,7 +6075,7 @@ debhelper (3.0.24) unstable; urgency=low
 debhelper (3.0.23) unstable; urgency=low
 
   * dh_shlibdeps: the -l switch now just adds to LD_LIBRARY_PATH, if it is
-    already set. Newer fakeroots set it, and clobbering their settings 
+    already set. Newer fakeroots set it, and clobbering their settings
     breaks things since they LD_PRELOAD a library that is specified in the
     LD_LIBRARY_PATH. (blah) Closes: #97494
 
@@ -6205,7 +6211,7 @@ debhelper (3.0.8) unstable; urgency=low
 
 debhelper (3.0.7) unstable; urgency=low
 
-  * dh_makeshlibs: only generate call to ldconfig if it really looks like 
+  * dh_makeshlibs: only generate call to ldconfig if it really looks like
     a given *.so* file is indeed a shared library.
 
  -- Joey Hess <joeyh@debian.org>  Fri, 23 Feb 2001 14:38:50 -0800
@@ -6241,7 +6247,7 @@ debhelper (3.0.1) unstable; urgency=low
 debhelper (3.0.0) unstable; urgency=low
 
   * Added dh_installman, a new program that replaces dh_installmanpages.
-    It is not DWIM. You tell it what to install and it figures out where 
+    It is not DWIM. You tell it what to install and it figures out where
     based on .TH section field and filename extension. I reccommend everyone
     begin using it, since this is much better then dh_installmanpages's
     evilness. I've been meaning to do this for a very long time..
@@ -6363,7 +6369,7 @@ debhelper (2.2.12) unstable; urgency=medium
 
 debhelper (2.2.11) unstable; urgency=medium
 
-  * Fixed dh_installwm. Oops. Closes: #81124 
+  * Fixed dh_installwm. Oops. Closes: #81124
 
  -- Joey Hess <joeyh@debian.org>  Wed,  3 Jan 2001 10:18:38 -0800
 
@@ -6381,7 +6387,7 @@ debhelper (2.2.9) unstable; urgency=low
 
 debhelper (2.2.8) unstable; urgency=medium
 
-  * dh_installwm: Moved update-alternatives --remove call to prerm, 
+  * dh_installwm: Moved update-alternatives --remove call to prerm,
     Closes: #80209
   * ALso guarded all update-alternatives --remove calls.
 
@@ -6416,7 +6422,7 @@ debhelper (2.2.3) unstable; urgency=low
   * If DH_COMPAT=3 is set, the following happens:
     - Various debian/foo files like debian/docs, debian/examples, etc,
       begin to support filename globbing. use \* to escape the wildcards of
-      course. I doubt this will bite anyone (Debian doesn't seem to contain 
+      course. I doubt this will bite anyone (Debian doesn't seem to contain
       files with "*" or "?" in their names..), but it is guarded by v3 just
       to be sure. Closes: #34120, #37694, #39846, #46249
 
@@ -6445,7 +6451,7 @@ debhelper (2.2.0) unstable; urgency=low
   * DH_COMPAT=3 now enables the following new features which I can't just
     turn on by default for fear of breaking backwards compatibility:
     - dh_makeshlibs makes the postinst/postrm call ldconfig. Closes: #77154
-      Patch from Masato Taruishi <taru@debian.org> (modified). If you 
+      Patch from Masato Taruishi <taru@debian.org> (modified). If you
       use this, be sure dh_makeshlibs runs before dh_installdeb; many
       old rules files have the ordering backwards.
     - dh_installdeb now causes all files in /etc to be registered as
@@ -6560,7 +6566,7 @@ debhelper (2.1.17) unstable; urgency=low
 
 debhelper (2.1.16) unstable; urgency=low
 
-  * dh_movefiles: fixed a regexp quoting problem with --sourcedir. 
+  * dh_movefiles: fixed a regexp quoting problem with --sourcedir.
     Closes: #75434
   * Whoops, I think I overwrote bod's NMU with 2.2.15. Let's merge those
     in:
@@ -6809,7 +6815,7 @@ debhelper (2.0.93) unstable; urgency=low
 
 debhelper (2.0.92) unstable; urgency=low
 
-  * Detect changelog parse failures and use a better error message. 
+  * Detect changelog parse failures and use a better error message.
     Closes: #62058
 
  -- Joey Hess <joeyh@debian.org>  Sat,  8 Apr 2000 20:02:16 -0700
@@ -6867,7 +6873,7 @@ debhelper (2.0.86) unstable; urgency=low
 
 debhelper (2.0.85) unstable; urgency=low
 
-  * Downgraded fileutils dependancy just a bit for the Hurd foks. 
+  * Downgraded fileutils dependancy just a bit for the Hurd foks.
     Closes: #54620
 
  -- Joey Hess <joeyh@debian.org>  Mon, 10 Jan 2000 16:41:29 -0800
@@ -6895,7 +6901,7 @@ debhelper (2.0.82) unstable; urgency=low
 
 debhelper (2.0.81) unstable; urgency=low
 
-  * dh_installxaw: Patch from Josip Rodin to update to fhs paths, 
+  * dh_installxaw: Patch from Josip Rodin to update to fhs paths,
     Closes: #53029
 
  -- Joey Hess <joeyh@debian.org>  Mon, 20 Dec 1999 12:21:34 -0800
@@ -6926,7 +6932,7 @@ debhelper (2.0.77) unstable; urgency=low
     link, and then removing its suid bit. This messed up the registration
     of the other had links, since their permissions were now changed,
     leading to unpredictable results. The fix is to just not remove suid
-    bits until all files have been registered. 
+    bits until all files have been registered.
 
  -- Joey Hess <joeyh@debian.org>  Tue, 30 Nov 1999 00:26:42 -0800
 
@@ -6934,20 +6940,20 @@ debhelper (2.0.76) unstable; urgency=low
 
   * dh_installmanpages:
     - Added support for translated man pages, with a patch from Kis Gergely
-      <kisg@lme.linux.hu>. Closes: #51268 
-    - Fixed the undefined value problem in Kis's patch. 
-    - This also Closes: #37092 come to think of it. 
+      <kisg@lme.linux.hu>. Closes: #51268
+    - Fixed the undefined value problem in Kis's patch.
+    - This also Closes: #37092 come to think of it.
   * dh_shlibdeps, dh_shlibdeps.1:
     - Added -X option, which makes it not examine some files. This is
-      useful in rare cases. Closes: #51100 
+      useful in rare cases. Closes: #51100
     - Always pass "-dDepends" before the list of files, which makes it
       easier to specify other -d parameters in the uparams, and doesn't
-      otherwise change the result at all. 
+      otherwise change the result at all.
   * doc/TODO:
      - dh_installdebfiles is no longer a part of debhelper. This affects
       exactly one package in unstable, biss-awt, which has had a bug filed
       against it for 200+ days now asking that it stop using the program.
-      dh_installdebfiles has been depreacted for nearly 2 years now.. 
+      dh_installdebfiles has been depreacted for nearly 2 years now..
   * This changelog was automatically generated from CVS commit information.
     Fear makechangelog.
 
@@ -6965,7 +6971,7 @@ debhelper (2.0.74) unstable; urgency=low
     act on files that don't exist.
   * dh_installchangelogs: to comply with policy, if it's told to act on a
     html changelog, it installs it as changelog.html.gz and dumps a plain
-    text version to changelog.gz. The dumping is done with lynx. 
+    text version to changelog.gz. The dumping is done with lynx.
     (Closes: #51099)
   * Dh_Getopt.pm: Modified it so any options specified after -- are added to
     U_PARAMS. This means that instead of passing '-u"something nasty"' to
@@ -7100,7 +7106,7 @@ debhelper (2.0.59) unstable; urgency=low
 
   * dh_installdocs: if $TMP/usr/share/doc/$PACKAGE is a broken symlink,
     leaves it alone, assumming that the maintainer knows what they're doing
-    and is probably linking to the doc dir of another package. 
+    and is probably linking to the doc dir of another package.
     (Closes: #46183)
 
  -- Joey Hess <joeyh@debian.org>  Mon,  4 Oct 1999 16:27:28 -0700
@@ -7285,7 +7291,7 @@ debhelper (2.0.29) unstable; urgency=low
 
 debhelper (2.0.28) unstable; urgency=low
 
-  * Oops, dh_installpam was omitted from the package. Added back. 
+  * Oops, dh_installpam was omitted from the package. Added back.
     Closes: #43652
 
  -- Joey Hess <joeyh@debian.org>  Fri, 27 Aug 1999 19:16:38 -0700
@@ -7308,7 +7314,7 @@ debhelper (2.0.25) unstable; urgency=low
 
 debhelper (2.0.24) unstable; urgency=low
 
-  * dh_installdocs: Handle trailing whitespace after Document: name. 
+  * dh_installdocs: Handle trailing whitespace after Document: name.
     Closes: #43148.
 
  -- Joey Hess <joeyh@debian.org>  Wed, 18 Aug 1999 10:23:17 -0700
@@ -7418,7 +7424,7 @@ debhelper (2.0.11) unstable; urgency=low
 debhelper (2.0.10) unstable; urgency=low
 
   * dh_compress: compress changelog.html files. (Closes: #40626)
-  * dh_installchangelogs: installs a link from changelog.html.gz to changelog.gz, 
+  * dh_installchangelogs: installs a link from changelog.html.gz to changelog.gz,
     because I think it's important that upstream changelogs always be accessable
     at that name.
   * dh_compress: removed the usr/share/X11R6/man bit. Note part of FHS.
@@ -7479,7 +7485,7 @@ debhelper (2.0.03) unstable; urgency=low
 
 debhelper (2.0.02) unstable; urgency=low
 
-  * If you're going to use v2, it's reccommended you call 
+  * If you're going to use v2, it's reccommended you call
     "dh_testversion 2". Added a note about that to doc/v2.
   * Dh_Lib.pm compat: if a version that is greater than the highest
     supported compatibility level is specified, abort with an error. Perhaps
@@ -7500,7 +7506,7 @@ debhelper (2.0.00) unstable; urgency=low
   * If DH_COMPAT=2, then debian/<package> will be used for the temporary
     build directory for all packages. debian/tmp is no more! (Well, except
     dh_movefiles still uses it.)
-  * debhelper.1: documented this. 
+  * debhelper.1: documented this.
   * Dh_lib.pm: added compat(), pass in a number, it returns true if the
     current compatibility level is equal to that number.
   * doc/PROGRAMMING: documented that.
@@ -7677,7 +7683,7 @@ debhelper (1.2.64) unstable; urgency=low
 debhelper (1.2.63) unstable; urgency=low
 
   * dh_installxaw: updated to work with xaw-wrappers 0.90 and above. It
-    actually has to partially parse the xaw-wrappers config files now. 
+    actually has to partially parse the xaw-wrappers config files now.
 
  -- Joey Hess <joeyh@debian.org>  Sun,  2 May 1999 19:13:34 -0700
 
@@ -7739,7 +7745,7 @@ debhelper (1.2.55) unstable; urgency=low
 debhelper (1.2.54) unstable; urgency=low
 
   * dh_installinit.1: man page fixups (#34160).
-  * *.1: the date of each man page is now automatically updated when 
+  * *.1: the date of each man page is now automatically updated when
     debhelper is built to be the last modification time of the man page.
 
  -- Joey Hess <joeyh@debian.org>  Thu,  8 Apr 1999 20:28:00 -0700
@@ -7862,7 +7868,7 @@ debhelper (1.2.38) unstable; urgency=low
 debhelper (1.2.37) unstable; urgency=low
 
   * dh_installdocs: Patch from Jim Pick <jim@jimpick.com>, fixes regexp error (Closes: #33431).
-  * dh_installxaw: new program by Daniel Martin 
+  * dh_installxaw: new program by Daniel Martin
     <Daniel.Martin@jhu.edu>, handles xaw-wrappers integration.
   * dh_installxaw.1: wrote man page.
 
@@ -7877,7 +7883,7 @@ debhelper (1.2.36) unstable; urgency=low
 
 debhelper (1.2.35) unstable; urgency=low
 
-  * Dh_Lib.pm filearray(): Deal with multiple spaces and spaces at the 
+  * Dh_Lib.pm filearray(): Deal with multiple spaces and spaces at the
     beginning of lines in files. (closes: #33161)
 
  -- Joey Hess <joeyh@debian.org>  Tue,  9 Feb 1999 21:01:07 -0800
@@ -8034,7 +8040,7 @@ debhelper (1.2.17) unstable; urgency=low
   * dh_makeshlibs: relaxed regexp to find library name and number a little so
     it will work on libraries with a major but no minor version in their
     filename (examples of such: libtcl8.0.so.1, libBLT-unoff.so.1)
-  * dh_movefiles: added --sourcedir option to make it move files out of 
+  * dh_movefiles: added --sourcedir option to make it move files out of
     some directory besides debian/tmp (#30221)
 
  -- Joey Hess <joeyh@debian.org>  Fri,  4 Dec 1998 13:56:57 -0800
@@ -8126,7 +8132,7 @@ debhelper (1.2.5) unstable; urgency=low
 
   * The perl conversion is complete.
   .
-  * dh_compress: perlized (yay, perl has readlink, no more ls -l | awk 
+  * dh_compress: perlized (yay, perl has readlink, no more ls -l | awk
     garbage!)
   * dh_lib, dh_getopt.pl: deleted, nothing uses them anymore.
   * debian/rules: don't install above 2 files.
@@ -8231,7 +8237,7 @@ debhelper (1.1.20) unstable; urgency=low
 debhelper (1.1.19) unstable; urgency=low
 
   * dh_installmanpages: look at basename of man pacges specified on command
-    line to skip, for backwards compatibility. 
+    line to skip, for backwards compatibility.
 
  -- Joey Hess <joeyh@debian.org>  Thu, 10 Sep 1998 11:31:42 -0700
 
@@ -8259,14 +8265,14 @@ debhelper (1.1.17) unstable; urgency=low
 
 debhelper (1.1.16) unstable; urgency=low
 
-  * dh_fixperms: remove execute bits from static libraries as well as 
+  * dh_fixperms: remove execute bits from static libraries as well as
     shared libraries. (#26414)
 
  -- Joey Hess <joeyh@debian.org>  Fri,  4 Sep 1998 14:46:37 -0700
 
 debhelper (1.1.15) unstable; urgency=medium
 
-  * dh_installmanpages: the new perl version had a nasty habit of 
+  * dh_installmanpages: the new perl version had a nasty habit of
     installing .so.x library files as man pages. Fixed.
   * dh_installmanpages: the code to exclude searching for man pages in
     debian/tmp directories was broken. Fixed.
@@ -8390,7 +8396,7 @@ debhelper (1.1.4) unstable; urgency=low
   * Made all perl code work with use strict and -w (well, except
     dh_getopt.pl, but that's a hack that'll go away one day).
   * I didn't realize, but rewriting dh_installdocs in perl fixed bug #24686
-    (blank lines in debian/docs file problem), although this same problem 
+    (blank lines in debian/docs file problem), although this same problem
     applies to other debhelper programs... like dh_installexamples, which had
     the same bug fixed when I rewrote it in perl just now.
   * Dh_Lib.pm: accidentially didn't check DH_VERBOSE if commands were not
@@ -8438,7 +8444,7 @@ debhelper (1.1.1) unstable; urgency=low
 debhelper (1.1.0) unstable; urgency=low
 
   * New unstable branch of debhelper.
-  
+
   * TODO: list all current bugs, in order I plan to tackle them.
   * Added debhelper.1 man page, which groups all the debhelper options that
     are common to all commands in once place so I can add new options w/o
@@ -8446,7 +8452,7 @@ debhelper (1.1.0) unstable; urgency=low
   * dh_*.1: updated all debheper man pages to refer to debhelper(1) where
     appropriate. Also corrected a host of little errors.
   * doc/README: moved a lot of this file into debhelper.1.
-  * dh_*: -N option now excludes a package from the list of packages the 
+  * dh_*: -N option now excludes a package from the list of packages the
     programs act on. (#25247)
 
  -- Joey Hess <joeyh@debian.org>  Sat,  8 Aug 1998 17:49:56 -0700
@@ -8454,7 +8460,7 @@ debhelper (1.1.0) unstable; urgency=low
 debhelper (1.0) stable unstable; urgency=low
 
   * 1.0 at last!
-  
+
   * This relelase is not really intended for stable. I throw a copy into
     stable-updates because I want it to be available as an upgrade for
     people using debian 2.0 (the current version in debian 2.0 has no
@@ -8515,10 +8521,10 @@ debhelper (0.98) unstable; urgency=low
 debhelper (0.97) unstable; urgency=low
 
   * doc/from-debstd: fixed a typo.
-  * examples/*: install-stamp no longer depends on phony build targey; now 
+  * examples/*: install-stamp no longer depends on phony build targey; now
     install-stamp depends on build-stamp instead (#24234).
   * dh_fixperms: applied patch from Herbert Xu <herbert@gondor.apana.org.au>
-    to fix bad uses of the find command, so it should now work on packages 
+    to fix bad uses of the find command, so it should now work on packages
     with files with spaces in them (#22005). It's also much cleaner. Thanks,
     Herbert!
   * dh_getopt.pl, doc/PROGRAMMING: added DH_EXCLUDE_FIND, to make the above
@@ -8543,7 +8549,7 @@ debhelper (0.95) unstable; urgency=low
 
 debhelper (0.94) unstable; urgency=low
 
-  * dh_md5sums: fixed so it handles spaces and other odd characters in 
+  * dh_md5sums: fixed so it handles spaces and other odd characters in
     filenames correctly. (#23046, #23700, #22010)
   * As a side effect, got rid of the nasty temporary file dh_md5sums used
     before.
@@ -8585,7 +8591,7 @@ debhelper (0.90) unstable; urgency=low
     output the sequence of debhelper commands that approximate what debstd
     would do in the same situation.
   * dh_debstd is completly untested, I don't have the source to any packages
-    that use debstd available. Once this is tested, I plan to release 
+    that use debstd available. Once this is tested, I plan to release
     debhelper 1.0!
   * Added a from-debstd document that gives a recipe to convert from debstd
     to debhelper.
@@ -8593,7 +8599,7 @@ debhelper (0.90) unstable; urgency=low
     permissions changed.
   * dh_testroot: test for uid == 0, instead of username == root, becuase
     some people enjoy changing root's name.
-  * dh_installinit: handle debian/init.d as well as debian/init files, 
+  * dh_installinit: handle debian/init.d as well as debian/init files,
     for backwards compatibility with debstd. Unlike with debstd, the two
     files are treated identically.
   * dh_lib, PROGRAMMING: added "warning" function.
@@ -8669,7 +8675,7 @@ debhelper (0.80) unstable; urgency=low
 
   * Moved under cvs (so I can fork a stable and an unstable version).
   * dh_movefiles: first move real files, then move symlinks. (#18220)
-    Thanks to Bdale Garbee <bdale@gag.com> and Adam Heath 
+    Thanks to Bdale Garbee <bdale@gag.com> and Adam Heath
     <adam.heath@usa.net> for help on the implementation.
   * dh_installchangelogs: use debian/package.changelog files if they exist
     rather than debian/changelog. It appears some people do need per-package
@@ -8803,8 +8809,8 @@ debhelper (0.63) unstable; urgency=low
     debian-policy that du control files are bad.
   * examples/*: removed dh_du calls.
   * debian/rules: removed dh_du call.
-  * Modified dh_gencontrol, dh_makeshlibs, and dh_md5sums to generate files 
-    with the correct permissions even if the umask is set to unusual 
+  * Modified dh_gencontrol, dh_makeshlibs, and dh_md5sums to generate files
+    with the correct permissions even if the umask is set to unusual
     values. (#18283)
 
  -- Joey Hess <joeyh@debian.org>  Mon, 16 Feb 1998 23:34:36 -0800
@@ -9013,7 +9019,7 @@ debhelper (0.29) unstable; urgency=low
   * A side effect of this (of interest only to the debhelper programmer) is
     that doit() can no longer handle complex commands now. (ie, pipes, `;',
     `&', etc separating multiple commands, or redirection)
-  * dh_makeshlibs, dh_md5sums, dh_installdebfiles, dh_du, dh_clean, 
+  * dh_makeshlibs, dh_md5sums, dh_installdebfiles, dh_du, dh_clean,
     dh_installdirs: don't pass complex commands to doit().
 
  -- Joey Hess <joeyh@debian.org>  Thu,  4 Dec 1997 13:56:14 -0500
@@ -9089,7 +9095,7 @@ debhelper (0.19) unstable; urgency=low
 debhelper (0.18) unstable; urgency=low
 
   * examples/*: added source, diff targets that just print an error.
-  * dh_clean: clean up more files - *.orig, *.rej, *.bak, .*.orig, .*.rej, 
+  * dh_clean: clean up more files - *.orig, *.rej, *.bak, .*.orig, .*.rej,
     .SUMS, TAGS, and empty files.
   * dh_lib: doit(): use eval on parameters, instead of directly running
     them. This lets me clean up several nasty areas where I had to echo the
@@ -9107,14 +9113,14 @@ debhelper (0.17) unstable; urgency=low
 
 debhelper (0.16) unstable; urgency=low
 
-  * dh_compress: always compress changelog and upstream changelog, no 
+  * dh_compress: always compress changelog and upstream changelog, no
     matter what their size (#14604) (policy 5.8)
 
  -- Joey Hess <joeyh@debian.org>  Thu,  6 Nov 1997 19:50:36 -0500
 
 debhelper (0.15) unstable; urgency=low
 
-  * README: documented what temporary directories are used by default for 
+  * README: documented what temporary directories are used by default for
     installing package files into.
   * dh_*: added -P flag, to let a different package build directory be
     specified.
@@ -9233,7 +9239,7 @@ debhelper (0.2) unstable; urgency=low
   * dh_clean: allow specification of additional files to remove as
     parameters.
   * dh_compress: fixed it to not compress doc/package/copyright
-  * dh_installmanpage: allow listing of man pages that should not be 
+  * dh_installmanpage: allow listing of man pages that should not be
     auto-installed as parameters.
   * dh_installdebfiles: make sure all installed files have proper ownerships
     and permissions.
