Fix typo "belive" in d/copyright and ancient d/changelog entries
Signed-off-by: Axel Beckert <abe@deuxchevaux.org>

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,8 @@
 debhelper (10.10.6) UNRELEASED; urgency=medium
 
   * Cleanup trailing whitespace in ancient debian/changelog entries.
+  * Fix typo "belive" in debian/copyright and ancient debian/changelog
+    entries.
 
  -- Axel Beckert <abe@debian.org>  Fri, 27 Oct 2017 23:48:44 +0200
 
@@ -6845,7 +6847,7 @@ debhelper (2.0.89) unstable; urgency=low
   * dh_installwm now behaves like a proper debhelper command, and reads
     debian/<package>.wm too. This is a small behavior change; filenames
     specified on the command line no longer apply to all packages it acts
-    on. I can't belive this program existed for 2 years with such a glaring
+    on. I can't believe this program existed for 2 years with such a glaring
     problem; I guess most people don't need ot register 5 wm's in 3
     sub-packages. Anyway, it can handle such things now. :-)
   * Moved Dh_*.pm to /usr/lib/perl5/Debian/Debhelper. *big* change.
