Cleanup trailing whitespace in debian/rules
Signed-off-by: Axel Beckert <abe@deuxchevaux.org>

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 debhelper (10.10.6) UNRELEASED; urgency=medium
 
-  * Cleanup trailing whitespace in ancient debian/changelog entries.
+  * Cleanup trailing whitespace in ancient debian/changelog entries and
+    debian/rules.
   * Fix typo "belive" in debian/copyright and ancient debian/changelog
     entries.
 
