--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,7 @@ debhelper (10.10.6) UNRELEASED; urgency=medium
     debian/rules.
   * Fix typo "belive" in debian/copyright and ancient debian/changelog
     entries.
+  * Use HTTPS in debian/copyright format URL.
 
  -- Axel Beckert <abe@debian.org>  Fri, 27 Oct 2017 23:48:44 +0200
 
