dh_perl: Prune usr/share/doc directory in File::Find
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -6,6 +6,8 @@ debhelper (10.10.6) UNRELEASED; urgency=medium
     entries.
   * Use HTTPS in debian/copyright format URL.
   * Remove support for named compat levels.
+  * dh_perl: Make dh_perl faster on packages with large doc
+    directories by pruning the entire doc directory.
 
  -- Axel Beckert <abe@debian.org>  Fri, 27 Oct 2017 23:48:44 +0200
 
