dh_install: Fix --exclude on entire patterns
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -23,6 +23,9 @@ debhelper (10.10.6) UNRELEASED; urgency=medium
   * dh_installsystemd,dh_systemd_start: Use "restart" instead of the
     "try-restart" action.  This ensures that newly added services are
     started the first time they are installed.  (Closes: #879727)
+  * dh_install: Fix regression where it was no longer possible to
+    exclude an entire pattern / source file.  Thanks to James Cowgill
+    for the report.  (Closes: #814856)
 
  -- Axel Beckert <abe@debian.org>  Fri, 27 Oct 2017 23:48:44 +0200
 
