--- a/debian/changelog
+++ b/debian/changelog
@@ -26,6 +26,8 @@ debhelper (10.10.6) UNRELEASED; urgency=medium
   * dh_install: Fix regression where it was no longer possible to
     exclude an entire pattern / source file.  Thanks to James Cowgill
     for the report.  (Closes: #814856)
+  * dh_installsystemd: Permit missing explicitly requested file in
+    package as long as another on being acted on ships it.
 
  -- Axel Beckert <abe@debian.org>  Fri, 27 Oct 2017 23:48:44 +0200
 
