--- a/debian/changelog
+++ b/debian/changelog
@@ -22,10 +22,11 @@ debhelper (10.10.6) UNRELEASED; urgency=medium
     deb packages.
   * dh_installsystemd,dh_systemd_start: Use "restart" instead of the
     "try-restart" action.  This ensures that newly added services are
-    started the first time they are installed.  (Closes: #879727)
+    started the first time they are installed.  (Closes: #879727,
+    LP#1707880)
   * dh_install: Fix regression where it was no longer possible to
     exclude an entire pattern / source file.  Thanks to James Cowgill
-    for the report.  (Closes: #814856)
+    for the report.  (Closes: #814856, LP#1554979)
   * dh_installsystemd: Permit missing explicitly requested file in
     package as long as another on being acted on ships it.
 
