--- a/debian/changelog
+++ b/debian/changelog
@@ -29,6 +29,8 @@ debhelper (10.10.6) UNRELEASED; urgency=medium
     for the report.  (Closes: #814856, LP#1554979)
   * dh_installsystemd: Permit missing explicitly requested file in
     package as long as another on being acted on ships it.
+  * dh_installsystemd: Optimize the search for files installed in the
+    tmpfiles.d directories to only look in the tmpfiles.d directories.
 
  -- Axel Beckert <abe@debian.org>  Fri, 27 Oct 2017 23:48:44 +0200
 
