d/changelog: Use "LP: #nnn" for Ubuntu bugs
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -23,10 +23,10 @@ debhelper (10.10.6) UNRELEASED; urgency=medium
   * dh_installsystemd,dh_systemd_start: Use "restart" instead of the
     "try-restart" action.  This ensures that newly added services are
     started the first time they are installed.  (Closes: #879727,
-    LP#1707880)
+    LP: #1707880)
   * dh_install: Fix regression where it was no longer possible to
     exclude an entire pattern / source file.  Thanks to James Cowgill
-    for the report.  (Closes: #814856, LP#1554979)
+    for the report.  (Closes: #814856, LP: #1554979)
   * dh_installsystemd: Permit missing explicitly requested file in
     package as long as another on being acted on ships it.
   * dh_installsystemd: Optimize the search for files installed in the
