--- a/debian/changelog
+++ b/debian/changelog
@@ -31,6 +31,12 @@ debhelper (10.10.6) UNRELEASED; urgency=medium
     package as long as another on being acted on ships it.
   * dh_installsystemd: Optimize the search for files installed in the
     tmpfiles.d directories to only look in the tmpfiles.d directories.
+  * Add experimental support for building some packages for "TARGET"
+    rather than "HOST" via the X-DH-Build-For-Type field.  The field
+    is subject to removal and changes without notice.  The field is
+    not considered by dpkg tooling and therefore you will still have
+    to manually work around tools like dpkg-gencontrol (even when
+    called via dh_gencontrol).
 
   [ Felipe Sateler ]
   * dh_installsystemd: Fix a bug where dh_installsystemd would generate
