--- a/debian/changelog
+++ b/debian/changelog
@@ -37,6 +37,8 @@ debhelper (10.10.6) UNRELEASED; urgency=medium
     not considered by dpkg tooling and therefore you will still have
     to manually work around tools like dpkg-gencontrol (even when
     called via dh_gencontrol).
+  * dh_makeshlibs: Ignore non-ELF files even if they are named ".so".
+    (Closes: #880480)
 
   [ Felipe Sateler ]
   * dh_installsystemd: Fix a bug where dh_installsystemd would generate
