--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-debhelper (10.10.6) UNRELEASED; urgency=medium
+debhelper (10.10.6) unstable; urgency=medium
 
   [ Axel Beckert ]
   * Cleanup trailing whitespace in ancient debian/changelog entries and
@@ -50,7 +50,7 @@ debhelper (10.10.6) UNRELEASED; urgency=medium
     Thanks to Ben Hutchings and Bastian Blank for the bug report.
     (Closes: #881190)
 
- -- Axel Beckert <abe@debian.org>  Fri, 27 Oct 2017 23:48:44 +0200
+ -- Niels Thykier <niels@thykier.net>  Sat, 11 Nov 2017 11:18:11 +0000
 
 debhelper (10.10.5) unstable; urgency=medium
 
