dh_strip: Fix regression that broke "make_debug"
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+debhelper (10.10.7) UNRELEASED; urgency=medium
+
+  * dh_strip: Fix a regression that caused debug symbols for
+    executables to be discarded instead of included into
+    debug packages.
+
+ -- Niels Thykier <niels@thykier.net>  Sat, 11 Nov 2017 13:47:37 +0000
+
 debhelper (10.10.6) unstable; urgency=medium
 
   [ Axel Beckert ]
