--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-debhelper (10.10.7) UNRELEASED; urgency=medium
+debhelper (10.10.7) unstable; urgency=medium
 
   * dh_strip: Fix a regression that caused debug symbols for
     executables to be discarded instead of included into
@@ -6,7 +6,7 @@ debhelper (10.10.7) UNRELEASED; urgency=medium
   * Dh_Lib: Ensure that $dh{U_PARAMS} is always defined as a
     list.  Thanks to Adrian Bunk for the bug report.
 
- -- Niels Thykier <niels@thykier.net>  Sat, 11 Nov 2017 13:47:37 +0000
+ -- Niels Thykier <niels@thykier.net>  Sat, 11 Nov 2017 14:10:21 +0000
 
 debhelper (10.10.6) unstable; urgency=medium
 
