Mark c11 as in open beta
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debhelper.pod
+++ b/debhelper.pod
@@ -586,7 +586,7 @@ package.
 
 =item v11
 
-This compatibility level is still open for development; use with caution.
+This compatibility level is open for beta testing; changes may occur.
 
 Changes from v10 are:
 
