--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (10.10.8) UNRELEASED; urgency=medium
+
+  * Document that compat 11 is now in its open beta phase.
+
+ -- Niels Thykier <niels@thykier.net>  Sun, 12 Nov 2017 09:55:24 +0000
+
 debhelper (10.10.7) unstable; urgency=medium
 
   * dh_strip: Fix a regression that caused debug symbols for
