--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-debhelper (10.10.8) UNRELEASED; urgency=medium
+debhelper (10.10.8) unstable; urgency=medium
 
   [ Niels Thykier ]
   * Document that compat 11 is now in its open beta phase.
@@ -12,7 +12,7 @@ debhelper (10.10.8) UNRELEASED; urgency=medium
   [ Dmitry Shachnev ]
   * qmake.pm: Set QMAKE_LINK correctly for cross-builds.
 
- -- Niels Thykier <niels@thykier.net>  Sun, 12 Nov 2017 09:55:24 +0000
+ -- Niels Thykier <niels@thykier.net>  Wed, 15 Nov 2017 19:46:00 +0000
 
 debhelper (10.10.7) unstable; urgency=medium
 
