meson.pm: Fix typo
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,8 @@ debhelper (10.10.9) UNRELEASED; urgency=medium
 
   [ Dmitry Shachnev ]
   * qmake.pm: Add missing import of generated_file.
+  * meson.pm: Find typo of meson in the name of the cross config
+    file.
 
  -- Niels Thykier <niels@thykier.net>  Thu, 16 Nov 2017 18:36:51 +0000
 
