qmake.pm: Push compiler information as ‘early’ flags to qmake.
To make sure qmake calls the right compiler to get library paths.

Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,8 @@ debhelper (10.10.9) UNRELEASED; urgency=medium
   * qmake.pm: Add missing import of generated_file.
   * meson.pm: Find typo of meson in the name of the cross config
     file.
+  * qmake.pm: Push compiler information as ‘early’ flags to qmake, to
+    make sure qmake calls the right compiler to get library paths.
 
  -- Niels Thykier <niels@thykier.net>  Thu, 16 Nov 2017 18:36:51 +0000
 
