dh_missing.1: Improve wording
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -15,6 +15,7 @@ debhelper (10.10.9) UNRELEASED; urgency=medium
     compat 11 when debian/tmp is an implicit source directory.
     Thanks to Christoph Biedl for reporting the bug.
     (Closes: #882083)
+  * dh_missing: Improve the wording about "debian/not-installed".
 
  -- Niels Thykier <niels@thykier.net>  Thu, 16 Nov 2017 18:36:51 +0000
 
