--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-debhelper (10.10.9) UNRELEASED; urgency=medium
+debhelper (10.10.9) unstable; urgency=medium
 
   [ Dmitry Shachnev ]
   * qmake.pm: Add missing import of generated_file.
@@ -17,7 +17,7 @@ debhelper (10.10.9) UNRELEASED; urgency=medium
     (Closes: #882083)
   * dh_missing: Improve the wording about "debian/not-installed".
 
- -- Niels Thykier <niels@thykier.net>  Thu, 16 Nov 2017 18:36:51 +0000
+ -- Niels Thykier <niels@thykier.net>  Sun, 19 Nov 2017 11:04:45 +0000
 
 debhelper (10.10.8) unstable; urgency=medium
 
