dh_installdeb: Basic validation of {rm,mv}_conffile
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debhelper.pod
+++ b/debhelper.pod
@@ -760,6 +760,12 @@ finds an old upstart configuration file.  The error is there to
 remind the package maintainer to ensure the proper removal of the
 conffiles shipped in previous versions of the package (if any).
 
+=item -
+
+The B<dh_installdeb> tool will do basic validation of some
+L<dpkg-maintscript-helper(1)> commands and will error out if the
+commands appear to be invalid.
+
 =back
 
 =back
