--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+debhelper (10.10.10) UNRELEASED; urgency=medium
+
+  * dh_installdeb: Do basic validation of rm_conffile and mv_conffile
+    parameters in "maintscript" parameters in compat 10 and newer.
+    In compat 12, this is an error.  Thanks to Andreas Beckmann for
+    the suggestions.  (Closes: #882626)
+
+ -- Niels Thykier <niels@thykier.net>  Sat, 25 Nov 2017 11:59:53 +0000
+
 debhelper (10.10.9) unstable; urgency=medium
 
   [ Dmitry Shachnev ]
