Update German translation of documentation
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -9,6 +9,7 @@ debhelper (10.10.10) UNRELEASED; urgency=medium
   [ Translations ]
   * Update Portuguese translation (Américo Monteiro)
     (Closes: #883635)
+  * Update German translation (Chris Leick)  (Closes: #884205)
 
  -- Niels Thykier <niels@thykier.net>  Sat, 25 Nov 2017 11:59:53 +0000
 
