de.po: Fix missing close of F-highlight
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/man/po4a/po/de.po
+++ b/man/po4a/po/de.po
@@ -5659,7 +5659,7 @@ msgid ""
 msgstr ""
 "setzt das Hauptpaket für ein Dokumentationspaket. Dies wird zur Installation "
 "der Dokumentation des Dokumentationspakets in F<< "
-"/usr/share/doc/I<Hauptpaket> benutzt, wie es das Debian-Richlinienhandbuch "
+"/usr/share/doc/I<Hauptpaket> >> benutzt, wie es das Debian-Richlinienhandbuch "
 "3.9.7 in §12.3 empfiehlt."
 
 #. type: textblock
