--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,10 @@
-debhelper (11.0.1) UNRELEASED; urgency=medium
+debhelper (11.1) UNRELEASED; urgency=medium
+
+  [ Paul Tagliamonte ]
+  * dh: Provide the DH_EXTRA_ADDONS environment as a method for
+    e.g. derivatives to enable additional debhelper add-ons.
+    It is *not* a replacement for the --with parameter (which
+    package maintainers should still use).  (Closes: #570935)
 
   [ Hideki Yamane ]
   * Fix typo of unnecessary.  (Closes: #884574)
