debhelper.pod: Improve the wording of two paragraphs
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debhelper.pod
+++ b/debhelper.pod
@@ -606,7 +606,7 @@ the B<systemd> sequence for B<dh> has also been removed.  If you need
 to disable the B<dh_installsystemd> helper tool, please use an empty
 override target.
 
-Please note that the B<dh_installsystemd> tool have a slightly
+Please note that the B<dh_installsystemd> tool has a slightly
 different behaviour in some cases (e.g. when using the B<--name>
 parameter).
 
@@ -672,9 +672,9 @@ F<debian/tmp> like B<dh_install>.
 =item -
 
 The B<perl-makemaker> and B<perl-build> build systems no longer pass
-B<-I.> to perl.  Packages that still need this behaviour can get
-emulate it by using the B<PERL5LIB> environment variable.  E.g. by
-adding B<export PERL5LIB=.> in their debian/rules file (or similar).
+B<-I.> to perl.  Packages that still need this behaviour emulate it by
+using the B<PERL5LIB> environment variable.  E.g. by adding B<export
+PERL5LIB=.> in their debian/rules file (or similar).
 
 =item -
 
