--- a/debian/changelog
+++ b/debian/changelog
@@ -9,6 +9,9 @@ debhelper (10.10.10) UNRELEASED; urgency=medium
     filled when using --dbg-package.  Thanks to Paul Wise for finding
     and reporting the bug.  (Closes: #884152)
 
+  [ Chris Leick ]
+  * debhelper.pod: Improve the wording of two parapraphs.
+
   [ Translations ]
   * Update Portuguese translation (Américo Monteiro)
     (Closes: #883635)
