--- a/man/po4a/po/pt.po
+++ b/man/po4a/po/pt.po
@@ -1411,7 +1411,7 @@ msgstr ""
 #. type: textblock
 #: debhelper.pod:609
 msgid ""
-"Please note that the B<dh_installsystemd> tool have a slightly different "
+"Please note that the B<dh_installsystemd> tool has a slightly different "
 "behaviour in some cases (e.g. when using the B<--name> parameter)."
 msgstr ""
 "Por favor note que a ferramenta B<dh_installsystemd> tem um comportamento "
@@ -1539,7 +1539,7 @@ msgstr ""
 #: debhelper.pod:674
 msgid ""
 "The B<perl-makemaker> and B<perl-build> build systems no longer pass B<-I.> "
-"to perl.  Packages that still need this behaviour can get emulate it by "
+"to perl.  Packages that still need this behaviour can emulate it by "
 "using the B<PERL5LIB> environment variable.  E.g. by adding B<export "
 "PERL5LIB=.> in their debian/rules file (or similar)."
 msgstr ""
