--- a/man/po4a/po/de.po
+++ b/man/po4a/po/de.po
@@ -1419,7 +1419,7 @@ msgstr ""
 #: debhelper.pod:609
 # FIXME s/have/has/
 msgid ""
-"Please note that the B<dh_installsystemd> tool have a slightly different "
+"Please note that the B<dh_installsystemd> tool has a slightly different "
 "behaviour in some cases (e.g. when using the B<--name> parameter)."
 msgstr ""
 "Bitte beachten Sie, dass sich das Werkzeug B<dh_installsystemd> in manchen "
@@ -1545,10 +1545,10 @@ msgstr ""
 
 #. type: textblock
 #: debhelper.pod:674
-# FIXME s/can get emulate it/can get an emulation of it/ (or emulate it)
+# FIXME s/can emulate it/can get an emulation of it/ (or emulate it)
 msgid ""
 "The B<perl-makemaker> and B<perl-build> build systems no longer pass B<-I.> "
-"to perl.  Packages that still need this behaviour can get emulate it by "
+"to perl.  Packages that still need this behaviour can emulate it by "
 "using the B<PERL5LIB> environment variable.  E.g. by adding B<export "
 "PERL5LIB=.> in their debian/rules file (or similar)."
 msgstr ""
