--- a/debian/changelog
+++ b/debian/changelog
@@ -8,6 +8,7 @@ debhelper (10.10.10) UNRELEASED; urgency=medium
   * dh_strip: Fix bug where the Build-Id field would not be properly
     filled when using --dbg-package.  Thanks to Paul Wise for finding
     and reporting the bug.  (Closes: #884152)
+  * d/control: Bump Standards-Version to 4.1.2 - no changes required.
 
   [ Chris Leick ]
   * debhelper.pod: Improve the wording of two parapraphs.
