debhelper.pod: Fix missing word
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debhelper.pod
+++ b/debhelper.pod
@@ -672,9 +672,9 @@ F<debian/tmp> like B<dh_install>.
 =item -
 
 The B<perl-makemaker> and B<perl-build> build systems no longer pass
-B<-I.> to perl.  Packages that still need this behaviour emulate it by
-using the B<PERL5LIB> environment variable.  E.g. by adding B<export
-PERL5LIB=.> in their debian/rules file (or similar).
+B<-I.> to perl.  Packages that still need this behaviour can emulate
+it by using the B<PERL5LIB> environment variable.  E.g. by adding
+B<export PERL5LIB=.> in their debian/rules file (or similar).
 
 =item -
 
