--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-debhelper (10.10.10) UNRELEASED; urgency=medium
+debhelper (11) unstable; urgency=medium
 
   [ Niels Thykier ]
   * dh_installdeb: Do basic validation of rm_conffile and mv_conffile
@@ -20,7 +20,7 @@ debhelper (10.10.10) UNRELEASED; urgency=medium
     (Closes: #883635)
   * Update German translation (Chris Leick)  (Closes: #884205)
 
- -- Niels Thykier <niels@thykier.net>  Sat, 25 Nov 2017 11:59:53 +0000
+ -- Niels Thykier <niels@thykier.net>  Sat, 16 Dec 2017 15:41:17 +0000
 
 debhelper (10.10.9) unstable; urgency=medium
 
