--- a/debhelper.pod
+++ b/debhelper.pod
@@ -250,7 +250,7 @@ If neither option is specified, debhelper currently defaults to
 B<--parallel> in compat 10 (or later) and B<--no-parallel> otherwise.
 
 As an optimization, B<dh> will try to avoid passing these options to
-subprocesses, if they are unncessary and the only options passed.
+subprocesses, if they are unnecessary and the only options passed.
 Notably this happens when B<DEB_BUILD_OPTIONS> does not have a
 I<parallel> parameter (or its value is 1).
 
