--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (12) UNRELEASED; urgency=medium
+
+  [ Hideki Yamane ]
+  * Fix typo of unnecessary.  (Closes: #884574)
+
+ -- Niels Thykier <niels@thykier.net>  Sun, 17 Dec 2017 07:59:18 +0000
+
 debhelper (11) unstable; urgency=medium
 
   [ Niels Thykier ]
