--- a/man/po4a/po/ja.po
+++ b/man/po4a/po/ja.po
@@ -674,12 +674,12 @@ msgstr ""
 "10 (以降) の場合は B<--parallel> をデフォルトに、そうでない場合は B<--no-"
 "parallel> が指定されます。"
 
-# FIXME: typo: unncessary
+# FIXME: typo: unnecessary
 #. type: textblock
 #: debhelper.pod:252
 msgid ""
 "As an optimization, B<dh> will try to avoid passing these options to "
-"subprocesses, if they are unncessary and the only options passed.  Notably "
+"subprocesses, if they are unnecessary and the only options passed.  Notably "
 "this happens when B<DEB_BUILD_OPTIONS> does not have a I<parallel> parameter "
 "(or its value is 1)."
 msgstr ""
