--- a/man/po4a/po/debhelper.pot
+++ b/man/po4a/po/debhelper.pot
@@ -501,7 +501,7 @@ msgstr ""
 #: debhelper.pod:252
 msgid ""
 "As an optimization, B<dh> will try to avoid passing these options to "
-"subprocesses, if they are unncessary and the only options passed.  Notably "
+"subprocesses, if they are unnecessary and the only options passed.  Notably "
 "this happens when B<DEB_BUILD_OPTIONS> does not have a I<parallel> parameter "
 "(or its value is 1)."
 msgstr ""
