debhelper.pod: Note that -s will be removed in compat 12
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debhelper.pod
+++ b/debhelper.pod
@@ -133,6 +133,8 @@ times to make debhelper operate on a given set of packages.
 
 Deprecated alias of B<-a>.
 
+This option is removed in compat 12.
+
 =item B<-N>I<package>, B<--no-package=>I<package>
 
 Do not act on the specified package even if an B<-a>, B<-i>, or B<-p> option lists
