dh_missing: Tweak single binary handling
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -12,6 +12,8 @@ debhelper (11.1) UNRELEASED; urgency=medium
   [ Niels Thykier ]
   * dh_missing: Support wildcards in debian/not-installed.  Thanks
     to Maximiliano Curia for the suggestion.  (Closes: #884556)
+  * dh_missing: Tweak handling of missing source directory and
+    single binary packages.
 
  -- Niels Thykier <niels@thykier.net>  Sun, 17 Dec 2017 07:59:18 +0000
 
