dh_missing: Make --list-missing the default in c12
Closes: nthykier/debhelper#2
Closes: Debian#650129
Closes: Debian#858834
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debhelper.pod
+++ b/debhelper.pod
@@ -765,6 +765,10 @@ The B<dh_installdeb> tool will do basic validation of some
 L<dpkg-maintscript-helper(1)> commands and will error out if the
 commands appear to be invalid.
 
+=item -
+
+The B<dh_missing> tool will now default to B<--list-missing>.
+
 =back
 
 =back
