--- a/debian/changelog
+++ b/debian/changelog
@@ -14,6 +14,9 @@ debhelper (11.1) UNRELEASED; urgency=medium
     to Maximiliano Curia for the suggestion.  (Closes: #884556)
   * dh_missing: Tweak handling of missing source directory and
     single binary packages.
+  * dh_missing: Make --list-missing the default in compat 12.
+    Thanks to Daniel Leidert and Christian Göttsche for the
+    suggestions.  (Closes: #650129, #858834)
 
  -- Niels Thykier <niels@thykier.net>  Sun, 17 Dec 2017 07:59:18 +0000
 
