dh_makeshlibs: Optimize shlibs generation a bit
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -20,6 +20,8 @@ debhelper (11.1) UNRELEASED; urgency=medium
   * meson.pm: Set LC_ALL to C.UTF-8 when invoking meson and
     debcrossgen (helper tool for cross-building).  Thanks to
     Jeremy Bicha for the suggestion.  (Closes: #873831)
+  * dh_makeshlibs: Avoid forking a shell per line in the
+    generated shlibs file.
 
  -- Niels Thykier <niels@thykier.net>  Sun, 17 Dec 2017 07:59:18 +0000
 
