dh_makeshlibs: Find all unversioned SONAMES
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -22,6 +22,8 @@ debhelper (11.1) UNRELEASED; urgency=medium
     Jeremy Bicha for the suggestion.  (Closes: #873831)
   * dh_makeshlibs: Avoid forking a shell per line in the
     generated shlibs file.
+  * dh_makeshlibs: Find all libraries with an unversioned SONAME
+    field (and not just the unversioned ones containing ".so").
 
  -- Niels Thykier <niels@thykier.net>  Sun, 17 Dec 2017 07:59:18 +0000
 
