dh_makeshlibs: In c12, avoid passing SONAME-less binaries to dpkg-gensymbols
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debhelper.pod
+++ b/debhelper.pod
@@ -769,6 +769,11 @@ commands appear to be invalid.
 
 The B<dh_missing> tool will now default to B<--list-missing>.
 
+=item -
+
+The B<dh_makeshlibs> tool will now only pass libraries to L<dpkg-gensymbols(1)>
+if the ELF binary has a SONAME (containing ".so").
+
 =back
 
 =back
