--- a/debian/changelog
+++ b/debian/changelog
@@ -24,6 +24,9 @@ debhelper (11.1) UNRELEASED; urgency=medium
     generated shlibs file.
   * dh_makeshlibs: Find all libraries with an unversioned SONAME
     field (and not just the unversioned ones containing ".so").
+  * dh_makeshlibs: In compat 12, stop passing ELF binaries without
+    a SONAME to dpkg-gensymbols.  Thanks to Steve Langasek for the
+    report.  (Closes: #653640)
 
  -- Niels Thykier <niels@thykier.net>  Sun, 17 Dec 2017 07:59:18 +0000
 
