Dh_Lib: Make "exit 1" the default value for ERROR_HANDLER
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -36,6 +36,9 @@ debhelper (11.1) UNRELEASED; urgency=medium
     the first (functional) version with support for
     "defaults-disabled".  Thanks to Laurent Bigonville for the
     report and Evgeni Golov for filing #857452.  (Closes: #709384)
+  * Dh_Lib.pm: Make "exit 1" the default error-handler instead of
+    "exit $?" as this makes it easier to migrate from sed-based
+    autoscript substitutions to the new hash-based ones.
 
  -- Niels Thykier <niels@thykier.net>  Sun, 17 Dec 2017 07:59:18 +0000
 
