autoscripts/*systemd*: Consistently use "|| true"
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -39,6 +39,10 @@ debhelper (11.1) UNRELEASED; urgency=medium
   * Dh_Lib.pm: Make "exit 1" the default error-handler instead of
     "exit $?" as this makes it easier to migrate from sed-based
     autoscript substitutions to the new hash-based ones.
+  * autoscripts/*systemd*: Also use "|| true" in removal scripts for
+    systemd related tools if we do it in other scripts for the same
+    command.  Thanks to Laurent Bigonville for the report.
+    (Closes: #761272)
 
  -- Niels Thykier <niels@thykier.net>  Sun, 17 Dec 2017 07:59:18 +0000
 
