dh_installinit: Do most autoscripts substs without a shell
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -43,6 +43,8 @@ debhelper (11.1) UNRELEASED; urgency=medium
     systemd related tools if we do it in other scripts for the same
     command.  Thanks to Laurent Bigonville for the report.
     (Closes: #761272)
+  * dh_installinit: Perform the autoscript substitutions without
+    needing a shell.
 
  -- Niels Thykier <niels@thykier.net>  Sun, 17 Dec 2017 07:59:18 +0000
 
