dh_clean: Skip cleaning in .pc and _darcs
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -45,6 +45,8 @@ debhelper (11.1) UNRELEASED; urgency=medium
     (Closes: #761272)
   * dh_installinit: Perform the autoscript substitutions without
     needing a shell.
+  * dh_clean: Skip cleaning in the '.pc' and '_darcs' directories.
+    (Closes: #566861)
 
  -- Niels Thykier <niels@thykier.net>  Sun, 17 Dec 2017 07:59:18 +0000
 
