dh_strip: Do not strip debug symbols in the .build-id dir
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -47,6 +47,9 @@ debhelper (11.1) UNRELEASED; urgency=medium
     needing a shell.
   * dh_clean: Skip cleaning in the '.pc' and '_darcs' directories.
     (Closes: #566861)
+  * dh_strip: Do not strip debug symbols in ".../debug/.build-id/".
+    Thanks to Mattia Rizzolo for reporting the bug.
+    (Closes: #886037)
 
  -- Niels Thykier <niels@thykier.net>  Sun, 17 Dec 2017 07:59:18 +0000
 
