dh_gencontrol: Deduplicate debug ids
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -50,6 +50,9 @@ debhelper (11.1) UNRELEASED; urgency=medium
   * dh_strip: Do not strip debug symbols in ".../debug/.build-id/".
     Thanks to Mattia Rizzolo for reporting the bug.
     (Closes: #886037)
+  * dh_gencontrol: Deduplicate debug-ids before inserting them into
+    the control file.  Thanks to Mattia Rizzolo for reporting the
+    bug.  (Closes: #886038)
 
  -- Niels Thykier <niels@thykier.net>  Sun, 17 Dec 2017 07:59:18 +0000
 
