d/control: Add a Breaks for cmake in backports
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -56,6 +56,9 @@ debhelper (11.1) UNRELEASED; urgency=medium
   * dh: Rewrite sequence handling to ensure that dh does not "inline"
     a subtarget of a target it recurses into.  Thanks to James
     Cowgill for reporting the bug.  (Closes: #880840)
+  * d/control: Add a Breaks against cmake (<< 3.8~) to ensure that
+    cmake response to the /run change in compat 11.  Thanks to
+    Adrian Bunk for the suggestion.  (Closes: #886127)
 
  -- Niels Thykier <niels@thykier.net>  Sun, 17 Dec 2017 07:59:18 +0000
 
