R³ support: DPKG_GAIN_ROOT_CMD => DEB_GAIN_ROOT_CMD
We are renaming DPKG_GAIN_ROOT_CMD to DEB_GAIN_ROOT_CMD for
consistency with other dpkg variables.

Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -59,6 +59,8 @@ debhelper (11.1) UNRELEASED; urgency=medium
   * d/control: Add a Breaks against cmake (<< 3.8~) to ensure that
     cmake response to the /run change in compat 11.  Thanks to
     Adrian Bunk for the suggestion.  (Closes: #886127)
+  * Dh_Lib.pm/dh_testroot: Support the DEB_GAIN_ROOT_CMD environment
+    that replaces DPKG_GAIN_ROOT_CMD.
 
  -- Niels Thykier <niels@thykier.net>  Sun, 17 Dec 2017 07:59:18 +0000
 
