d/control: Clean up and document versioned constraints
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -71,6 +71,8 @@ debhelper (11.1) UNRELEASED; urgency=medium
     - Note that the deprecated dh_systemd_enable and dh_systemd_start
       helpers have not been changed.  Services handled by these may
       still be started before configuration management happens.
+  * debian/control: Drop some very old versioned constraints that are
+    no longer important.
 
  -- Niels Thykier <niels@thykier.net>  Sun, 17 Dec 2017 07:59:18 +0000
 
