dh_installsystemd: Fix NOOP PROMISE
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -73,6 +73,8 @@ debhelper (11.1) UNRELEASED; urgency=medium
       still be started before configuration management happens.
   * debian/control: Drop some very old versioned constraints that are
     no longer important.
+  * dh_installsystemd: Fix NOOP PROMISE to account for the tmpfiles.d
+    files.
 
  -- Niels Thykier <niels@thykier.net>  Sun, 17 Dec 2017 07:59:18 +0000
 
