Updated French translation of documentation
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -76,6 +76,9 @@ debhelper (11.1) UNRELEASED; urgency=medium
   * dh_installsystemd: Fix NOOP PROMISE to account for the tmpfiles.d
     files.
 
+  [ Translations ]
+  * Update French translation (Baptiste Jammet)  (Closes: #886279)
+
  -- Niels Thykier <niels@thykier.net>  Sun, 17 Dec 2017 07:59:18 +0000
 
 debhelper (11) unstable; urgency=medium
