d/control: Bump S-V to 4.1.3 - no additional changes required

--- a/debian/changelog
+++ b/debian/changelog
@@ -75,6 +75,8 @@ debhelper (11.1) UNRELEASED; urgency=medium
     no longer important.
   * dh_installsystemd: Fix NOOP PROMISE to account for the tmpfiles.d
     files.
+  * debian/control: Bump Standards-Versions to 4.1.3 - no additional
+    changes required.
 
   [ Translations ]
   * Update French translation (Baptiste Jammet)  (Closes: #886279)
