--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-debhelper (11.1) UNRELEASED; urgency=medium
+debhelper (11.1) unstable; urgency=medium
 
   [ Paul Tagliamonte ]
   * dh: Provide the DH_EXTRA_ADDONS environment as a method for
@@ -81,7 +81,7 @@ debhelper (11.1) UNRELEASED; urgency=medium
   [ Translations ]
   * Update French translation (Baptiste Jammet)  (Closes: #886279)
 
- -- Niels Thykier <niels@thykier.net>  Sun, 17 Dec 2017 07:59:18 +0000
+ -- Niels Thykier <niels@thykier.net>  Sat, 06 Jan 2018 21:17:47 +0000
 
 debhelper (11) unstable; urgency=medium
 
