autoscripts: Improve rollback handling
On failed upgrades, dpkg can potentially roll back to the existing
version of a package.  Improve the scripts to handle this case better.
In particularly, ensure that the "postinst" snippets are also run on
an "abort-upgrade".

Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+debhelper (11.1.3) UNRELEASED; urgency=medium
+
+  * autoscripts/*: Improve rollback handling of many scripts.
+    Notably a lot of scripts failed to rerun the postinst parts
+    on an "abort-upgrade".  (Closes: #446856)
+
+ -- Niels Thykier <niels@thykier.net>  Sun, 14 Jan 2018 09:54:57 +0000
+
 debhelper (11.1.2) unstable; urgency=medium
 
   * dh: Fix non-sense error about a missing "startpoint object
