dh: Always run commands with sequence defined options
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -12,6 +12,9 @@ debhelper (11.1.3) UNRELEASED; urgency=medium
   * ninja.pm: Set LC_ALL=C.UTF-8 when calling ninja to avoid
     meson choking on UTF-8 characters when it embeds itself into
     e.g. the build or install.  (Closes: #873831)
+  * dh: Remove the assumption that sequences will supply only
+    "safe no-op" parameters to commands.  Thanks to Axel Beckert
+    and Sascha Steinbiss for the report.  (Closes: #887727)
 
  -- Niels Thykier <niels@thykier.net>  Sun, 14 Jan 2018 09:54:57 +0000
 
