Dh_Lib: Print environment changes when printing *doit commands
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -6,6 +6,9 @@ debhelper (11.1.3) UNRELEASED; urgency=medium
   * debian/control: Add a Breaks on meson to ensure that we have
     meson (>= 0.40.0) as the meson build system uses --wrap-mode.
     This is mostly relevant for backports.
+  * Dh_Lib.pm: When printing commands (e.g. for doit), also show
+    changes to the environment (when done as a part of the
+    command).
 
  -- Niels Thykier <niels@thykier.net>  Sun, 14 Jan 2018 09:54:57 +0000
 
