dh_installdocs: Make -A neuter main-doc package auto-detection
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,9 @@ debhelper (11.1.4) UNRELEASED; urgency=medium
   * qmake.pm/qmake4.pm: Avoid global state in the build systems.
   * dh_makeshlibs: Fix --no-act, which could still cause writes
     to the shlibs file.  Thanks to Sven Joachim for reporting it.
+  * dh_installdocs: Discard auto-detected main doc package when
+    passed -A/--all as it causes file-conflicts.
+    (Closes: #886108, #888294)
 
  -- Niels Thykier <niels@thykier.net>  Sun, 21 Jan 2018 08:18:20 +0000
 
