Update maintainer address to debhelper@packages.d.o
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -12,6 +12,11 @@ debhelper (11.1.4) UNRELEASED; urgency=medium
     finding the bug.  (Closes: #888251)
   * d/control: Update the Vcs-* fields to point to
     salsa.debian.org as a part of the migration from alioth.
+  * d/control: Update maintainer address debhelper@packages.d.o
+    as a part of the migration from alioth.  Any subscription
+    to debhelper-devel@lists.alioth.debian.org should be
+    replaced by a subscription in tracker.debian.org or
+    salsa.debian.org.
 
  -- Niels Thykier <niels@thykier.net>  Sun, 21 Jan 2018 08:18:20 +0000
 
