makefile.pm: Sort %DEB_DEFAULT_TOOLS arguments
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -29,6 +29,8 @@ debhelper (11.1.4) UNRELEASED; urgency=medium
     actions (such as chown'ing).
   * d/control: Bump dependency on dh-autoreconf to ensure that
     packages do not experience #887482.
+  * makefile.pm: Ensure that command line arguments are passed
+    deterministically to make when cross-compiling.
 
  -- Niels Thykier <niels@thykier.net>  Sun, 21 Jan 2018 08:18:20 +0000
 
